--- a/END-OF-PHASE-1-PROJECT/styles.css
+++ b/END-OF-PHASE-1-PROJECT/styles.css
@@ -28,11 +28,12 @@ h4 {
 
 .header {
   padding: 10px; /* Remove horizontal padding from the header itself */
+  margin-left: -40px;
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 1000;
-  background-color: #f0f0f0; 
+  background-color: #dfd9d9; 
   /* f0f0f0 */
   /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
 }
@@ -58,6 +59,7 @@ h4 {
 
 #contactify {
   color: #4caf50;
+  margin-left: 10px;
 }
 
 .content {
@@ -75,16 +77,16 @@ h4 {
   width: 1200px;
   z-index: 1000;
   background-color: #f0f0f0;
-  margin-top: 80px;
+  margin-top: 81px;
   margin-right: 80px;
 }
 
 .add-form {
-  background-color: #f9f9f9;
+  background-color: #000000;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);  
-  margin-top: -20px;
+  margin-top: 100px;
   position: sticky;
   top: 200px;
 }
@@ -95,8 +97,13 @@ h4 {
   gap: 10px;
 }
 
+.add-form h2 {
+  color: #4caf50;
+}
+
 .add-form label {
   font-weight: bold;
+  color: #4caf50;
 }
 
 .add-form input,
@@ -109,19 +116,20 @@ h4 {
 }
 
 .add-form button {
-  background-color: #007bff;
+  background-color: #4caf50;
   color: white;
   border: none;
   cursor: pointer;
   margin-left: 10px;
+  margin-top: 15px;
 }
 
 .add-form button:hover {
-  background-color: #0056b3;
+  background-color: #4caf50;
 }
 
 .contact-list {
-  background-color: #fff;
+  background-color: #000000;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -136,7 +144,7 @@ h4 {
 }
 
 .contact-card {
-  background-color: #f9f9f9;
+  background: linear-gradient(to bottom, #4caf50, #dfd9d9);
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
@@ -154,7 +162,7 @@ h4 {
 .contact-card:hover {
   transform: translateY(-10px);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-  background: linear-gradient(135deg, #f9f9f9 0%, #e0e0e0 100%);
+  background: linear-gradient(to right, #dfd9d9, #4caf50);
 }
 
 /* Modal styles */
@@ -171,17 +179,23 @@ h4 {
 }
 
 .modal-content {
-  background-color: #fefefe;
+  background-color: #000000;
   margin: 10% auto; /* 10% from top, centered horizontally */
   padding: 20px;
   border: 1px solid #888;
   width: 80%; /* Set width of modal */
   max-width: 500px; /* Limit maximum width */
   position: relative;
+  border-radius: 20px;
 }
 
 .modal label {
   font-weight: bold;
+  color: #4caf50;
+}
+
+.modal h2 {
+  color: #4caf50;
 }
 
 .close {
@@ -218,10 +232,26 @@ h4 {
   border: none;
   cursor: pointer;
   margin-left: 10px;
+  margin-top: 5px;
 }
 
 #updateBtn:hover {
-  background-color: #45a049;
+  background-color: #4caf50;
+  cursor: pointer;
+}
+
+.editBtn {
+  background-color: gray;
+  color: #fff;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.deleteBtn {
+  background-color: red;
+  color: #fff;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 /* Search bar styles */
@@ -233,11 +263,11 @@ h4 {
 
 .search-container {
 
-  background-color: blue;
+  background-color: #000000;
   border-radius: 40px;
   position: fixed;
   margin-left: 460px;
-  margin-top: -40px;
+  margin-top: -20px;
   width: 680px;
   height: 50px;
 }
@@ -253,13 +283,13 @@ h4 {
   border: 1px solid #ccc;
   border-radius: 20px;
   width: 420px;
-  margin-top: -7px;
+  margin-top: 5px;
   margin-left: 13px;
 }
 
 #search-span {
   margin-left: 14px;
-  color: white;
+  color: #4caf50;
 }
 
 /* /Footer */
@@ -267,7 +297,7 @@ h4 {
 .ft-container {
   display: flex;
   justify-content: center;
-  background-color: #000000;
+  background-color: #4caf50;
   color: #ffffff;
   margin-top: 20px;
   border-radius: 8px;
