--- a/END-OF-PHASE-1-PROJECT/styles.css
+++ b/END-OF-PHASE-1-PROJECT/styles.css
@@ -18,7 +18,7 @@ h1, h2 {
 .title-container h4 {
   margin: 0;
   font-size: 16px;
-  text-align: right; /* Align the h4 to the right */
+  text-align: right;
 }
 
 h4 {
@@ -27,29 +27,27 @@ h4 {
 }
 
 .header {
-  padding: 10px; /* Remove horizontal padding from the header itself */
+  padding: 10px; 
   margin-left: -40px;
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 1000;
   background-color: #dfd9d9; 
-  /* f0f0f0 */
-  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
 }
 
 .header .container {
   display: flex;
   align-items: center;
-  max-width: 1200px; /* Adjust the max-width as needed */
-  margin: 0 auto; /* Center the container */
-  padding: 0 20px; /* Add horizontal padding to the container */
+  max-width: 1200px; 
+  margin: 0 auto; 
+  padding: 0 20px;
 }
 
 .logo {
   width: 50px;
   height: 50px;
-  margin-right: 6px; /* Add some space between the logo and the text */
+  margin-right: 6px;
 }
 
 .header h1 {
@@ -64,14 +62,14 @@ h4 {
 
 .content {
   display: grid;
-  grid-template-columns: 1fr 3fr; /* Updated to have 1 part for add-form and 3 parts for contact-list */
-  gap: 40px; /* Increased gap to add more space between the add-form and contact-list */
-  align-items: start; /* Align items to the start to prevent stretching */
-  padding-top: 80px; /* Adjust padding to account for the fixed header */
+  grid-template-columns: 1fr 3fr; 
+  gap: 40px;
+  align-items: start;
+  padding-top: 80px;
 }
 
 .mn-search-ctn {
-  padding: 48px; /* Remove horizontal padding from the header itself */
+  padding: 48px; 
   position: fixed;
   top: 0;
   width: 1200px;
@@ -114,7 +112,7 @@ h4 {
   font-size: 16px;
   border: 1px solid #ccc;
   border-radius: 4px;
-  width: calc(100% - 20px); /* Adjust width to account for padding */
+  width: calc(100% - 20px);
 }
 
 .add-form button {
@@ -140,7 +138,7 @@ h4 {
 
 #contactsList {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* Display contact cards in 3 columns */
+  grid-template-columns: repeat(3, 1fr); 
   gap: 20px;
 
 }
@@ -171,26 +169,25 @@ h4 {
   background: linear-gradient(to bottom, #ada7a7, #f1e2e2);
 }
 
-/* Modal styles */
 .modal {
-  display: none; /* Hide modal by default */
+  display: none; 
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
-  z-index: 1000; /* Ensure it appears above other content */
-  overflow: auto; /* Allow scrolling if needed */
+  background-color: rgba(0, 0, 0, 0.5); 
+  z-index: 1000; 
+  overflow: auto; 
 }
 
 .modal-content {
   background-color: #dfd9d9;
-  margin: 10% auto; /* 10% from top, centered horizontally */
+  margin: 10% auto; 
   padding: 20px;
   border: 1px solid #888;
-  width: 80%; /* Set width of modal */
-  max-width: 500px; /* Limit maximum width */
+  width: 80%; 
+  max-width: 500px; 
   position: relative;
   border-radius: 20px;
 }
@@ -225,7 +222,7 @@ h4 {
 
 #editContactForm input,
 #editContactForm button {
-  width: calc(100% - 20px); /* Adjust width to account for padding */
+  width: calc(100% - 20px); 
   padding: 10px;
   font-size: 16px;
   border: 1px solid #ccc;
@@ -260,13 +257,6 @@ h4 {
   cursor: pointer;
 }
 
-/* Search bar styles */
-/* .search-bar {
-  margin-bottom: 20px;
-  display: flex;
-  align-items: center;
-} */
-
 .search-container {
 
   background-color: #000000;
@@ -298,8 +288,6 @@ h4 {
   color: #4caf50;
 }
 
-/* /Footer */
-
 .ft-container {
   display: flex;
   justify-content: center;
@@ -318,12 +306,11 @@ h4 {
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Cover the entire container */
-  z-index: -1; /* Ensure the video is behind other content */
+  object-fit: cover; 
+  z-index: -1;
 }
 
 
-/* Responsive adjustments */
 @media screen and (max-width: 600px) {
   .modal-content {
     width: 90%;
