--- a/END-OF-PHASE-1-PROJECT/styles.css
+++ b/END-OF-PHASE-1-PROJECT/styles.css
@@ -167,6 +167,11 @@ h4 {
   transform: translateY(-10px);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
   background: linear-gradient(to bottom, #ada7a7, #f1e2e2);
+  border: 2px solid #000;
+}
+
+span {
+  font-weight: bold;
 }
 
 .modal {
@@ -264,7 +269,7 @@ h4 {
   position: fixed;
   margin-left: 460px;
   margin-top: -30px;
-  width: 680px;
+  width: 694px;
   height: 50px;
 }
 
